[gd_scene load_steps=6 format=3 uid="uid://dqfod1mptbtve"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/WorldViewportContainer/WorldViewportContainer.gd" id="1_fywpf"]
[ext_resource type="PackedScene" uid="uid://dvfn3vnt35gw7" path="res://scenes/ui/ProjectEditor/WorldViewportContainer/PanZoomController.tscn" id="2_tht5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1hpj6"]
radius = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmjcj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0976562, 0.0976562, 0.0976562, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvb5t"]
bg_color = Color(0.199219, 0.199219, 0.199219, 0.431373)

[node name="WorldView" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fywpf")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
size = Vector2i(711, 400)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]

[node name="PanZoomController" parent="ViewportContainer/Viewport" instance=ExtResource("2_tht5a")]

[node name="Objects" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="Cursor" type="Area2D" parent="ViewportContainer/Viewport"]
position = Vector2(20, 20)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportContainer/Viewport/Cursor"]
shape = SubResource("CircleShape2D_1hpj6")

[node name="ToolTipLabel" type="Label" parent="ViewportContainer/Viewport"]
visible = false
z_index = 10
offset_left = 27.0
offset_top = 30.0
offset_right = 128.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_kmjcj")
text = "This is a tooltip.
I'm on the 2nd line!"

[node name="CursorPositionLabel" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 96.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_wvb5t")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pan_changed" from="ViewportContainer/Viewport/PanZoomController" to="." method="_on_pan_zoom_controller_pan_changed"]
[connection signal="pan_state_changed" from="ViewportContainer/Viewport/PanZoomController" to="." method="_on_pan_zoom_controller_pan_state_changed"]
[connection signal="zoom_changed" from="ViewportContainer/Viewport/PanZoomController" to="." method="_on_pan_zoom_controller_zoom_changed"]
